compiler/testData/diagnostics/tests/unsignedTypes/callDefaultConstructorOfUnsignedType.fir.kt
// RUN_PIPELINE_TILL: SOURCE
val foo = <!INVISIBLE_REFERENCE!>UInt<!>()
